# Tschau-Sepp

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  FEATURES.md  Makefile  README.md  README_MULTIPLAYER.md  ai_integration.py  ai_player.py  app.py  debug_ai.py  dev_server.py  game_logic.py  game_server.py  package.json  pyproject.toml  railway.json  rate_limiter.py  requirements.txt  run_server.py  simple_ai_handler.py  test_bot_locally.py
attached_assets/: Pasted--TSCHAU-SEPP-Spielregeln-angepasste-Variante-Ziel-des-Spiels-Alle-Karten-ab-1747156462836.txt
static/css/: card-indicator.css  label-styles.css  mobile-optimized.css  modern-ui.css  multiplayer-features.css  style.css
static/js/: error-recovery.js  game-multiplayer.js  game.js  multiplayer.js  sound-manager.js  touch-handler.js
templates/: index.html
